add titles to files

--- a/collaborate/MotelBooking.html
+++ b/collaborate/MotelBooking.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Mosaic Planner</title>
+	<title>Mosaic Planner | Motel Bookings</title>
 	<meta charset="utf-8">
 	<script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='styleshee' type='text/css'>
@@ -21,10 +21,6 @@
 				<a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
 				<h2>Mosaic Planners</h2>
 			</div>
-			<div class="nav-button-container">
-				<button>Register</button>
-				<button>Sign In</button>
-			</div>
 		</div>
 		<ul class="navbar-bottom">
 			<li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
@@ -36,11 +32,9 @@
 			</li>
 			<li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
 				<ul>
-					<li><a href="">Takeway</a></li>
-					<li><a href="">Home Delivery</a></li>
-					<li><a href="">Food Category</a></li>
-					<li><a href="">Helpdesk</a></li>
-					<li><a href="">Virtual Booking</a></li>
+                    <li><a href="">Weekend Getaway</a></li>
+                    <li><a href="">Offers</a></li>
+                    <li><a href="">Helpdesk</a></li>
 				</ul>
 			</li>
 			<li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
@@ -52,8 +46,8 @@
 			</li>
 			<li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
 				<ul>
-					<li><a href="">Flight Booking</a></li>
-					<li><a href="">Train Booking</a></li>
+					<li><a href="./flights.html">Flight Booking</a></li>
+					<li><a href="./train.html">Train Booking</a></li>
 					<li><a href="">Roadway Booking</a></li>
 				</ul>
 			</li>
