--- a/collaborate/contact.html
+++ b/collaborate/contact.html
@@ -36,11 +36,9 @@
 				</li>
 				<li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
 					<ul>
-						<li><a href="">Takeway</a></li>
-						<li><a href="">Home Delivery</a></li>
-						<li><a href="">Food Category</a></li>
+						<li><a href="">Weekend Getaway</a></li>
+						<li><a href="">Offers</a></li>
 						<li><a href="">Helpdesk</a></li>
-						<li><a href="">Virtual Booking</a></li>
 					</ul>
 				</li>
 				<li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
@@ -52,8 +50,8 @@
 				</li>
 				<li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
 					<ul>
-						<li><a href="">Flight Booking</a></li>
-						<li><a href="">Train Booking</a></li>
+						<li><a href="./flights.html">Flight Booking</a></li>
+						<li><a href="./train.html">Train Booking</a></li>
 						<li><a href="">Roadway Booking</a></li>
 					</ul>
 				</li>
