--- a/collaborate/roadway.html
+++ b/collaborate/roadway.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mosaic Planner | Roadways</title>
     <link rel="stylesheet" href="css/roadway.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
    <style>
@@ -13,23 +14,18 @@
    </style>
 </head>
 <body>
- 
     <header>
         <nav>
             <div class="navbar-top">
                 <div class="nav-inner-container">
-                    <a href="./index.html"><img src="img/logo.png" alt="" srcset=""></a>
+                    <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
                     <h2>Mosaic Planners</h2>
-                </div>
-                <div class="nav-button-container">
-                    <button>Register</button>
-                    <button>Sign In</button>
                 </div>
             </div>
             <ul class="navbar-bottom">
                 <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                     <ul>
-                        <li><a href="">Event Booking</a></li>
+                        <li><a href="./HomePage.html">Event Booking</a></li>
                         <li><a href="">Corporate Booking</a></li>
                         <li><a href="">Help Desk</a></li>
                     </ul>
@@ -45,16 +41,16 @@
                 </li>
                 <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                     <ul>
-                        <li><a href="">Hotel Booking</a></li>
-                        <li><a href="">Motel Booking</a></li>
+                        <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+                        <li><a href="./motelBooking.html">Motel Booking</a></li>
                         <li><a href="">Rental Apartments</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                     <ul>
-                        <li><a href="1018index.html">Flight Booking</a></li>
-                        <li><a href="train.html">Train Booking</a></li>
-                        <li><a href="roadway.html">Roadway Booking</a></li>
+                        <li><a href="./flight.html">Flight Booking</a></li>
+                        <li><a href="./train.html">Train Booking</a></li>
+                        <li><a href="./roadway.html">Roadway Booking</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
@@ -72,12 +68,12 @@
         <div class="first">
             Tickets Purchase Options
         </div>
-        <div class="pic1"><img src="img/b2.jpg" id="img1" alt="" width="250px" height="300px"></div>
-        <div class="pic2"><img src="img/b3.jpg" id="img2" alt="" width="250px" height="300px"></div>
+        <div class="pic1"><img src="./images/b2.jpg" id="img1" alt="" width="250px" height="300px"></div>
+        <div class="pic2"><img src="./images/b3.jpg" id="img2" alt="" width="250px" height="300px"></div>
         <div class="second">
             <table width=900 height=400> 
                 <tr>
-                    <td><img src="img/qc.png" width="30" height="25">&nbsp;&nbsp;Departure----Destination</td>
+                    <td><img src="./images/qc.png" width="30" height="25">&nbsp;&nbsp;Departure----Destination</td>
                     <td>Book</td>
                 </tr>
                
@@ -139,7 +135,7 @@
             <table>
                 <table width=900 height=400> 
                     <tr>
-                        <td><img src="img/qc.png" width="30" height="25">&nbsp;&nbsp;Departure--Destination</td>
+                        <td><img src="./images/qc.png" width="30" height="25">&nbsp;&nbsp;Departure--Destination</td>
                         <td>Book</td>
                     </tr>
                    
@@ -205,10 +201,11 @@
 <div class="footer-basic">
     <footer>
         <div class="social">
+            <a href="#"><i class="icon ion-social-facebook"></i></a>
             <a href="#"><i class="icon ion-social-instagram"></i></a>
-            <a href="#"><i class="icon ion-social-snapchat"></i></a>
+            <a href="#"><i class="icon ion-social-linkedin"></i></a>
             <a href="#"><i class="icon ion-social-twitter"></i></a>
-            <a href="#"><i class="icon ion-social-facebook"></i></a></div>
+        </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="#">Home</a></li>
             <li class="list-inline-item"><a href="#">Services</a></li>
