--- a/collaborate/travelplannerrequest.html
+++ b/collaborate/travelplannerrequest.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosaic Travels | Travel Planner Request</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/tourism.css">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
 </head>
@@ -133,6 +133,6 @@
         <p class="copyright">Copyright &copy; Mosaic Planners 2021 | All Rights Reserved</p>
     </footer>
 </body>
-<script src="./js/index.js"></script>
+<script src="./js/tourism.js"></script>
 
 </html>
