--- a/collaborate/flight.html
+++ b/collaborate/flight.html
@@ -5,13 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Flights</title>
-    <link rel="stylesheet" href="css/flight.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <title>Mosaic Planners | Flight Booking</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
             <ul class="navbar-bottom">
                 <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                     <ul>
-                        <li><a href="./homePage.html">Event Booking</a></li>
+                        <li><a href="./HomePage.html">Event Booking</a></li>
                         <li><a href="">Corporate Booking</a></li>
                         <li><a href="">Help Desk</a></li>
                     </ul>
@@ -48,9 +48,9 @@
                 </li>
                 <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                     <ul>
-                        <li><a href="./flights.html">Flight Booking</a></li>
+                        <li><a href="./flight.html">Flight Booking</a></li>
                         <li><a href="./train.html">Train Booking</a></li>
-                        <li><a href="">Roadway Booking</a></li>
+                        <li><a href="./roadway.html">Roadway Booking</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
@@ -64,8 +64,8 @@
         </nav>
     </header>
 <div class="header_page">
-    <div><a href="./flights.html"  class="a_link">Flights</a></div>
-        <div><a href="./train.html" class="a_link">Train</a></div>
+    <div><a href="flight.html" class="a_link">Flights</a></div>
+        <div><a href="train.html" class="a_link">Train</a></div>
         <div><a href="roadway.html" class="a_link">Roadway</a></div>
 </div>
 <div class="banner">
@@ -119,10 +119,11 @@
 <div class="footer-basic">
     <footer>
         <div class="social">
+            <a href="#"><i class="icon ion-social-facebook"></i></a>
             <a href="#"><i class="icon ion-social-instagram"></i></a>
-            <a href="#"><i class="icon ion-social-snapchat"></i></a>
+            <a href="#"><i class="icon ion-social-linkedin"></i></a>
             <a href="#"><i class="icon ion-social-twitter"></i></a>
-            <a href="#"><i class="icon ion-social-facebook"></i></a></div>
+        </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="#">Home</a></li>
             <li class="list-inline-item"><a href="#">Services</a></li>
@@ -173,6 +174,6 @@
 
     </div>
 </div>
-<script src="./js/flight.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
