--- a/collaborate/touristpackages.html
+++ b/collaborate/touristpackages.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosaic Planners | Tourism and Packages</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/tourism.css">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
@@ -208,7 +208,7 @@
         <p class="copyright">Copyright &copy; Mosaic Planners 2021 | All Rights Reserved</p>
     </footer>
 </body>
-<script src="./js/index.js"></script>
+<script src="./js/tourism.js"></script>
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script>
     const swiper = new Swiper('.swiper', {
