--- a/collaborate/train.html
+++ b/collaborate/train.html
@@ -6,12 +6,12 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Train</title>
-    <link rel="stylesheet" href="./css/phase2.css">
-    <link rel="stylesheet" href="./css/train.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <title>Mosaic Planners | Train Bookings</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/train.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
 
 </head>
@@ -28,7 +28,7 @@
             <ul class="navbar-bottom">
                 <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                     <ul>
-                        <li><a href="./homePage.html">Event Booking</a></li>
+                        <li><a href="./HomePage.html">Event Booking</a></li>
                         <li><a href="">Corporate Booking</a></li>
                         <li><a href="">Help Desk</a></li>
                     </ul>
@@ -51,9 +51,9 @@
                 </li>
                 <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                     <ul>
-                        <li><a href="projectphrase1/1018index.html">Flight Booking</a></li>
-                        <li><a href="./train.html">Train Booking</a></li>
-                        <li><a href="">Roadway Booking</a></li>
+                        <li><a href="flight.html">Flight Booking</a></li>
+                        <li><a href="train.html">Train Booking</a></li>
+                        <li><a href="roadway.html">Roadway Booking</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
@@ -67,38 +67,41 @@
         </nav>
     </header>
     <div class="big">
-        ----Book train tickets to the five most recommended cities in India!----
+        <p>
+            ----Book train tickets to the five most recommended cities in India!----
+        </p>
     </div>
     <div class="second">
         <div>
-            <img src="./images/bang.jpg" width=501px height=430px>
+            <img id="img1" src="./images/b1.jpg" width=501px height=430px>
             <p>【The city of software---Banglore】</p>
-            <a href="./pages/ticket.html" target="blank">*GET TICKETS*</a>
+            <a href="subpages/ticket.html" target="blank">*GET TICKETS*</a>
         </div>
         <div>
-            <img src="./images/del.jpg" width=500px height=430px>
+            <img id="img2" src="./images/d1.jpg" width=500px height=430px>
             <p>【The capital city of India---Delhi】</p>
-            <a href="./pages/ticket1.html" target="blank">*GET TICKETS*</a>
+            <a href="subpages/ticket1.html" target="blank">*GET TICKETS*</a>
         </div>
         <div>
-            <img src="./images/hy.jpg" width=500px height=430px>
+            <img id="img3" src="./images/h1.jpg" width=500px height=430px>
             <p>【The city of culture---Hyderabad】</p>
-            <a href="./pages/ticket2.html" target="blank">*GET TICKETS*</a>
+            <a href="subpages/ticket2.html" target="blank">*GET TICKETS*</a>
         </div>
     </div>
     <div class="bigger">
         <div>
-            <img src="./images/mum.jpg" width=500px height=430px>
+            <img id="img4" src="./images/m1.jpg" width=500px height=430px>
             <p>【The city by the Sea---Mumbai】</p>
-            <a href="./pages/ticket3.html" target="blank">*GET TICKETS*</a>
+            <a href="subpages/ticket3.html" target="blank">*GET TICKETS*</a>
         </div>
         <div>
-            <img src="./images/ud.jpg" width=500px height=430px>
+            <img id="img5" src="./imag/u1.jpg" width=500px height=430px>
             <p>【The city of lake---Udaipur】</p>
-            <a href="./pages/ticket4.html" target="blank">*GET TICKETS*</a>
+            <a href="subpages/ticket4.html" target="blank">*GET TICKETS*</a>
         </div>
     </div>
 </body>
+<hr>
 <div class="footer-basic">
     <footer>
         <div class="social">
@@ -117,5 +120,6 @@
         <p class="copyright">Mosaic Planners © 2021</p>
     </footer>
 </div>
+<script src="js/train.js"></script>
 
 </html>
