--- a/collaborate/travelplanner.html
+++ b/collaborate/travelplanner.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosaic Planners | Personal Travel Planner</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/tourism.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
 </head>
@@ -146,7 +146,7 @@
         </ul>
         <p class="copyright">Copyright &copy; Mosaic Planners 2021 | All Rights Reserved</p>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/tourism.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.testimonial-swiper', {
