commiting third feature

--- a/collaborate/HomePage.html
+++ b/collaborate/HomePage.html
@@ -33,7 +33,7 @@
         <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
           <ul>
             <li><a href="homePage.html">Event Booking</a></li>
-            <li><a href="">About US</a></li>
+            <li><a href="./AboutUs.html">About US</a></li>
             <li><a href="">Help Desk</a></li>
           </ul>
         </li>
@@ -71,7 +71,7 @@
     </nav>
   </header>
   <main>
-    <!--Creates the popup body-->
+    <!-- Creates the popup body
     <button id=“show” onclick="show()">>Show Pop-Up</button>
     <dialog id=“popup”>
  
@@ -86,7 +86,7 @@
        
       <button id=“close” onclick="closePopup()">>Close Pop-Up</button>
        
-      </dialog>
+      </dialog> -->
     <table>
       <tr>
         <th>
