--- a/collaborate/userrating.html
+++ b/collaborate/userrating.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/userrating.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/hotel.css">
@@ -24,39 +25,37 @@
     <ul class="navbar-bottom">
       <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
         <ul>
-          <li><a href="">Event Booking</a></li>
-          <li><a href="">Corporate Booking</a></li>
+          <li><a href="./HomePage.html">Event Booking</a></li>
+          <li><a href="./AboutUs.html">About Us</a></li>
           <li><a href="">Help Desk</a></li>
         </ul>
       </li>
       <li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
         <ul>
-          <li><a href="">Takeway</a></li>
-          <li><a href="">Home Delivery</a></li>
-          <li><a href="">Food Category</a></li>
-          <li><a href="">Helpdesk</a></li>
-          <li><a href="">Virtual Booking</a></li>
+          <li><a href="">Weekend Getaway</a></li>
+          <li><a href="">Offers</a></li>
+          <li><a href="">Help Desk</a></li>
         </ul>
       </li>
       <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
         <ul>
-          <li><a href="/HotelBooking.html">Hotel Booking</a></li>
-          <li><a href="/MotelBooking.html">Motel Booking</a></li>
+          <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+          <li><a href="./motelBooking.html">Motel Booking</a></li>
           <li><a href="/RentalApartments.html">Rental Apartments</a></li>
         </ul>
       </li>
       <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
         <ul>
-          <li><a href="">Flight Booking</a></li>
-          <li><a href="">Train Booking</a></li>
-          <li><a href="">Roadway Booking</a></li>
+          <li><a href="./flight.html">Flight Booking</a></li>
+          <li><a href="./train.html">Train Booking</a></li>
+          <li><a href="./roadway.html">Roadway Booking</a></li>
         </ul>
       </li>
       <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
         <ul>
           <li><a href="./touristpackages.html">Tourist Packages</a></li>
           <li><a href="./localguides.html">Local Guides</a></li>
-          <li><a href="./travelplanner">Personal Travel Planner</a></li>
+          <li><a href="./travelplanner.html">Personal Travel Planner</a></li>
         </ul>
       </li>
     </ul>
