--- a/collaborate/HotelBooking.html
+++ b/collaborate/HotelBooking.html
@@ -29,7 +29,7 @@
             <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                 <ul>
                     <li><a href="./homePage.html">Event Booking</a></li>
-                    <li><a href="">Corporate Booking</a></li>
+                    <li><a href="./AboutUs.html">About US</a></li>
                     <li><a href="">Help Desk</a></li>
                 </ul>
             </li>
@@ -37,7 +37,7 @@
                 <ul>
                     <li><a href="">Weekend Getaway</a></li>
                     <li><a href="">Offers</a></li>
-                    <li><a href="">Helpdesk</a></li>
+                    <li><a href="">Help Desk</a></li>
                 </ul>
             </li>
             <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
@@ -49,9 +49,9 @@
             </li>
             <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                 <ul>
-                    <li><a href="./flights.html">Flight Booking</a></li>
+                    <li><a href="./flight.html">Flight Booking</a></li>
                     <li><a href="./train.html">Train Booking</a></li>
-                    <li><a href="">Roadway Booking</a></li>
+                    <li><a href="./roadway.html">Roadway Booking</a></li>
                 </ul>
             </li>
             <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
