--- a/collaborate/booknow.html
+++ b/collaborate/booknow.html
@@ -24,8 +24,8 @@
         <ul class="navbar-bottom">
            <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
               <ul>
-                 <li><a href="">Event Booking</a></li>
-                 <li><a href="">Corporate Booking</a></li>
+                 <li><a href="./HomePage.html">Event Booking</a></li>
+                 <li><a href="./AboutUs.html">About Us</a></li>
                  <li><a href="">Help Desk</a></li>
               </ul>
            </li>
@@ -45,16 +45,16 @@
            </li>
            <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
               <ul>
-                 <li><a href="./flights.html">Flight Booking</a></li>
+                 <li><a href="./flight.html">Flight Booking</a></li>
                  <li><a href="./train.html">Train Booking</a></li>
-                 <li><a href="">Roadway Booking</a></li>
+                 <li><a href="./roadway.html">Roadway Booking</a></li>
               </ul>
            </li>
            <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
               <ul>
                  <li><a href="./touristpackages.html">Tourist Packages</a></li>
                  <li><a href="./localguides.html">Local Guides</a></li>
-                 <li><a href="./travelplanner">Personal Travel Planner</a></li>
+                 <li><a href="./travelplanner.html">Personal Travel Planner</a></li>
               </ul>
            </li>
         </ul>
