--- a/collaborate/reception.html
+++ b/collaborate/reception.html
@@ -19,47 +19,41 @@
             <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
             <h2>Mosaic Planners</h2>
          </div>
-         <div class="nav-button-container">
-            <button>Register</button>
-            <button>Sign In</button>
-         </div>
       </div>
       <ul class="navbar-bottom">
          <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
             <ul>
-               <li><a href="">Event Booking</a></li>
-               <li><a href="">Corporate Booking</a></li>
+               <li><a href="./HomePage.html">Event Booking</a></li>
+               <li><a href="./AboutUs.html">About Us</a></li>
                <li><a href="">Help Desk</a></li>
             </ul>
          </li>
          <li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
             <ul>
-               <li><a href="">Takeway</a></li>
-               <li><a href="">Home Delivery</a></li>
-               <li><a href="">Food Category</a></li>
-               <li><a href="">Helpdesk</a></li>
-               <li><a href="">Virtual Booking</a></li>
+               <li><a href="">Weekend Getaway</a></li>
+               <li><a href="">Offers</a></li>
+               <li><a href="">Help Desk</a></li>
             </ul>
          </li>
          <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
             <ul>
-               <li><a href="/HotelBooking.html">Hotel Booking</a></li>
-               <li><a href="/MotelBooking.html">Motel Booking</a></li>
+               <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+               <li><a href="./motelBooking.html">Motel Booking</a></li>
                <li><a href="/rentalapartments.html">Rental Apartments</a></li>
             </ul>
          </li>
          <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
             <ul>
-               <li><a href="">Flight Booking</a></li>
-               <li><a href="">Train Booking</a></li>
-               <li><a href="">Roadway Booking</a></li>
+               <li><a href="./flight.html">Flight Booking</a></li>
+               <li><a href="./train.html">Train Booking</a></li>
+               <li><a href="./roadway.html">Roadway Booking</a></li>
             </ul>
          </li>
          <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
             <ul>
                <li><a href="./touristpackages.html">Tourist Packages</a></li>
                <li><a href="./localguides.html">Local Guides</a></li>
-               <li><a href="./travelplanner">Personal Travel Planner</a></li>
+               <li><a href="./travelplanner.html">Personal Travel Planner</a></li>
             </ul>
          </li>
       </ul>
