--- a/collaborate/roadway.html
+++ b/collaborate/roadway.html
@@ -26,17 +26,15 @@
                 <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                     <ul>
                         <li><a href="./HomePage.html">Event Booking</a></li>
-                        <li><a href="">Corporate Booking</a></li>
+                        <li><a href="./AboutUs.html">About Us</a></li>
                         <li><a href="">Help Desk</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
                     <ul>
-                        <li><a href="">Takeway</a></li>
-                        <li><a href="">Home Delivery</a></li>
-                        <li><a href="">Food Category</a></li>
-                        <li><a href="">Helpdesk</a></li>
-                        <li><a href="">Virtual Booking</a></li>
+                        <li><a href="">Weekend Getaway</a></li>
+                        <li><a href="">Offers</a></li>
+                        <li><a href="">Help Desk</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
