--- a/touristpackages.html
+++ b/touristpackages.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="navbar-top">
             <div class="nav-inner-container">
-                <a href="./touristpackages.html"><img src="./images/logo.png" alt="" srcset=""></a>
+                <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
                 <h2>Mosaic Planners</h2>
             </div>
         </div>
