--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2>Mosaic Planners</h2>
         </div>
         <div class="nav-button-container">
-          <a href="signUp.html" target="_blank"><button>Register</button></a>
+          <a href="./SignUp.html" target="_blank"><button>Register</button></a>
 
           <button id="review-add-btn2">Sign In</button>
         </div>
