--- a/collaborate/AboutUs.html
+++ b/collaborate/AboutUs.html
@@ -25,16 +25,14 @@
         <h2>Mosaic Planners</h2>
       </div>
       <div class="nav-button-container">
-        <a href="signUp.html" target="_blank"><button>Register</button></a>
-
-        <button id="review-add-btn2">Sign In</button>
+        
       </div>
     </div>
     <ul class="navbar-bottom">
       <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
         <ul>
           <li><a href="homePage.html">Event Booking</a></li>
-          <li><a href="">About US</a></li>
+          <li><a href="AboutUs.html">About US</a></li>
           <li><a href="">Help Desk</a></li>
         </ul>
       </li>
@@ -85,7 +83,11 @@
           <div class="row">
             <div class="col-12 col-lg-8 offset-lg-2">
               <h2>Our Expert Team</h2>
-              <p class="ourTeam-para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+              <p class="ourTeam-para">The only way to create great things every day is with great people
+                who truly enjoy their job. Talent goes beyond a keen eye for design or qualification on a 
+                piece of paper. We live and breathe what we do, we're enthusiastic and take pride in doing 
+                the best work we can.
+              </p>
             </div>
           </div>
           <div class="row">
@@ -105,12 +107,12 @@
     <div class="col-md-4">
       <div class="team-member">
         <div class="photo">
-          <img src="/images/user-icon.jpg" class="img-fluid">
+          <img src="./images/ankit.jpeg" class="img-fluid">
         </div>          
-        <h3>Brock Sinha</h3>
+        <h3>Ankit Saini</h3>
         <hr>
         <h5>Web Developer</h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Ankit has a sophisticated grasp in web development. After studying Information Technology Solutions from Humber college Ankit found his passion in web and never looked back.</p>
         <hr>
         <div class="follow-on">
           <ul>
@@ -130,12 +132,12 @@
     <div class="col-md-4">
       <div class="team-member">
         <div class="photo">
-          <img src="/images/user-icon.jpg" class="img-fluid">
+          <img src="./images/hailun.jpeg" class="img-fluid">
         </div>          
-        <h3>Brock Sinha2</h3>
+        <h3>Hailun Liao</h3>
         <hr>
         <h5>Web Developer</h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Hailun has completed his education in Information Technology Solutions from Humber college. His Core skills are process optimization,web design and marketing.</p>
         <hr>
         <div class="follow-on">
           <ul>
@@ -155,12 +157,12 @@
     <div class="col-md-4">
       <div class="team-member">
         <div class="photo">
-          <img src="/images/user-icon.jpg" class="img-fluid">
+          <img src="./images/Mustafa.jpg" class="img-fluid">
         </div>          
-        <h3>Brock Sinha3</h3>
+        <h3>Mustafa Udegadhwala</h3>
         <hr>
         <h5>Web Developer</h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Mustafa graduated from Humber college in 2023 with a post graduation degree in Information Technology Solutions. He is an Expert in designing and Optimization</p>
         <hr>
         <div class="follow-on">
           <ul>
@@ -180,12 +182,12 @@
     <div class="col-md-4">
       <div class="team-member">
         <div class="photo">
-          <img src="/images/user-icon.jpg" class="img-fluid">
+          <img src="./images/samridhi.jpeg" class="img-fluid">
         </div>          
-        <h3>Brock Sinha4</h3>
+        <h3>Samridhi Manchanda</h3>
         <hr>
         <h5>Web Developer</h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Samridhi enjoys ensuring that things run smoothly and creates operations strategy to keep the clients on-track. She has done her post graduation in Information Technology solutions from Humber college</p>
         <hr>
         <div class="follow-on">
           <ul>
@@ -205,12 +207,12 @@
     <div class="col-md-4">
       <div class="team-member">
         <div class="photo">
-          <img src="/images/user-icon.jpg" class="img-fluid">
+          <img src="./images/sourav.jpeg" class="img-fluid">
         </div>          
-        <h3>Brock Sinha5</h3>
+        <h3>Sourav Choudhary</h3>
         <hr>
         <h5>Web Developer</h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Sourav holds an Information Technology Solutions degree from Humber College and has extensive experience in operations and bussiness</p>
         <hr>
         <div class="follow-on">
           <ul>
@@ -258,10 +260,10 @@
     <p id="Our_Mission">Our Mission<br>To provide different kind of event related services to our clients which will make their events memorable</p>
     <div id="Our_Services">
     <h3 class="services">Other Services offered by us</h3>
-        <a href="AboutUs.html"><img src="./images/food2.png" alt="Food Service" class="Food"></a>
-        <a href="AboutUs.html"><img src="./images/accommodation.png" alt="Accomodation Services" class="accomodation"></a>
-        <a href="AboutUs.html"><img src="./images/transportation.png" alt="Transportation services" class="transport"></a>
-        <a href="AboutUs.html"><img src="./images/tourism.png" alt="Tourism and Packages" class="tourism"></a>
+        <a href="AboutUs.html"><img src="./images/food2.png" class="Food"></a>
+        <a href="./hotelBooking.html"><img src="./images/accommodation.png" class="accomodation"></a>
+        <a href="AboutUs.html"><img src="./images/transportation.png" class="transport"></a>
+        <a href="./touristpackages.html"><img src="./images/tourism.png" class="tourism"></a>
     </div>  
     
     <div class="background">
