--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
           <ul>
             <li><a href="./hotelBooking.html">Hotel Booking</a></li>
             <li><a href="./motelcontact.html">Motel Booking</a></li>
-            <li><a href="">Rental Apartments</a></li>
+            <li><a href="./rentalapartments.html">Rental Apartments</a></li>
           </ul>
         </li>
         <li>
