--- a/flight.html
+++ b/flight.html
@@ -43,7 +43,7 @@
                     <ul>
                         <li><a href="./hotelBooking.html">Hotel Booking</a></li>
                         <li><a href="./motelBooking.html">Motel Booking</a></li>
-                        <li><a href="">Rental Apartments</a></li>
+                        <li><a href="./rentalapartments.html">Rental Apartments</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
