--- a/member.html
+++ b/member.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a href="./HotelBooking.html">Hotel Booking</a></li>
           <li><a href="./MotelBooking.html">Motel Booking</a></li>
-          <li><a href="./RentalApartments.html">Rental Apartments</a></li>
+          <li><a href="./rentalapartments.html">Rental Apartments</a></li>
         </ul>
       </li>
       <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
