--- a/train.html
+++ b/train.html
@@ -44,14 +44,14 @@
                     <ul>
                         <li><a href="./hotelBooking.html">Hotel Booking</a></li>
                         <li><a href="./motelBooking.html">Motel Booking</a></li>
-                        <li><a href="">Rental Apartments</a></li>
+                        <li><a href="./rentalapartments.html">Rental Apartments</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                     <ul>
-                        <li><a href="flight.html">Flight Booking</a></li>
-                        <li><a href="train.html">Train Booking</a></li>
-                        <li><a href="roadway.html">Roadway Booking</a></li>
+                        <li><a href="./flight.html">Flight Booking</a></li>
+                        <li><a href="./train.html">Train Booking</a></li>
+                        <li><a href="./roadway.html">Roadway Booking</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
