--- a/hotelBooking.html
+++ b/hotelBooking.html
@@ -42,9 +42,9 @@
             </li>
             <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                 <ul>
-                    <li><a href="HotelBooking.html">Hotel Booking</a></li>
-                    <li><a href="MotelBooking.html">Motel Booking</a></li>
-                    <li><a href="RentalApartments.html">Rental Apartments</a></li>
+                    <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+                    <li><a href="./motelBooking.html">Motel Booking</a></li>
+                    <li><a href="./rentalapartments.html">Rental Apartments</a></li>
                 </ul>
             </li>
             <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
