--- a/rentalapartments.html
+++ b/rentalapartments.html
@@ -9,6 +9,7 @@
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
       <link rel="stylesheet" href="./css/main.css">
       <link rel="stylesheet" href="./css/rental.css">
      
@@ -31,16 +32,16 @@
           </li>
           <li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
               <ul>
-                  <li><a href="">Weekend Getaway</a></li>
-                  <li><a href="">Offers</a></li>
-                  <li><a href="">Help Desk</a></li>
+                  <li><a href="./weekend.html">Weekend Getaway</a></li>
+                  <li><a href="./offer.html">Offers</a></li>
+                  <li><a href="./contact.html">Help Desk</a></li>
               </ul>
           </li>
           <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
               <ul>
-                  <li><a href="HotelBooking.html">Hotel Booking</a></li>
-                  <li><a href="MotelBooking.html">Motel Booking</a></li>
-                  <li><a href="RentalApartments.html">Rental Apartments</a></li>
+                  <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+                  <li><a href="./motelBooking.html">Motel Booking</a></li>
+                  <li><a href="./rentalapartments.html">Rental Apartments</a></li>
               </ul>
           </li>
           <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
@@ -54,7 +55,7 @@
               <ul>
                   <li><a href="./touristpackages.html">Tourist Packages</a></li>
                   <li><a href="./localguides.html">Local Guides</a></li>
-                  <li><a href="./travelplanner">Personal Travel Planner</a></li>
+                  <li><a href="./travelplanner.html">Personal Travel Planner</a></li>
               </ul>
           </li>
       </ul>
