--- a/weekend.html
+++ b/weekend.html
@@ -35,9 +35,9 @@
               ><i class="fas fa-utensils"></i> Food</a
             >
             <ul>
-              <li><a href="offer.html">Offers</a></li>
-              <li><a href="weekend.html">Weekend Getaways</a></li>
-              <li><a href="contact.html">Helpdesk</a></li>
+              <li><a href="./offer.html">Offers</a></li>
+              <li><a href="./weekend.html">Weekend Getaways</a></li>
+              <li><a href="./contact.html">Helpdesk</a></li>
             </ul>
           </li>
           <li>
@@ -47,7 +47,7 @@
             <ul>
               <li><a href="./hotelBooking.html">Hotel Booking</a></li>
               <li><a href="./motelBooking.html">Motel Booking</a></li>
-              <li><a href="">Rental Apartments</a></li>
+              <li><a href="./rentalapartments.html">Rental Apartments</a></li>
             </ul>
           </li>
           <li>
