--- a/SignUp.html
+++ b/SignUp.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+  <!-- Providing background effect -->
+  <ul class="circles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
   <div class="area">
     <div id="login-box">
       <div class="left">
@@ -28,6 +41,7 @@
             Female: <input type="radio" name="gender" value="female">
             Other: <input type="radio" name="gender" value="other">
             <br><br><input type="text" id="zipcode" name="zip" placeholder="Postal code" />
+            <p id="error"></p>
             <input type="submit" class="submit" name="signup_submit" value="Sign me up" />
           </form>
       </div>
@@ -43,19 +57,7 @@
     <script src="./js/signUp.js"></script>
     </main>
     <footer>
-      <!-- Providing background effect -->
-      <ul class="circles">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      
     </footer>
   </div>
 </body>
