--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <ul>
             <li><a href="./index.html">Event Booking</a></li>
             <li><a href="./AboutUs.html">About US</a></li>
-            <li><a href="">Help Desk</a></li>
+            <li><a href="./AboutUs.html#screenBody">Help Desk</a></li>
           </ul>
         </li>
         <li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
@@ -198,7 +198,7 @@
 
     <div class="modal-overlay"></div>
 
-    <a href="" class="bottom-queries">Contact us for any queries</a>
+    <a href="./AboutUs.html#screenBody" class="bottom-queries">Contact us for any queries</a>
     <div class="modal-overlay2"></div>
 
     <!-- signup page -->
@@ -234,9 +234,9 @@
         <a href="#"><i class="icon ion-social-facebook"></i></a>
       </div>
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="./index.html">Home</a></li>
         <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="#">About</a></li>
+        <li class="list-inline-item"><a href="./AboutUs.html">About</a></li>
         <li class="list-inline-item"><a href="#">Terms</a></li>
         <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
       </ul>
