--- a/AboutUs.html
+++ b/AboutUs.html
@@ -31,7 +31,7 @@
       </div> -->
     </div>
     <ul class="navbar-bottom">
-      <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
+      <li><a href="./index.html"><i class="fas fa-home"></i> Home</a>
         <ul>
           <li><a href="./index.html">Event Booking</a></li>
           <li><a href="./AboutUs.html">About US</a></li>
