linked pages and improved data validation

--- a/localguides.html
+++ b/localguides.html
@@ -30,7 +30,7 @@
                 <ul>
                     <li><a href="./index.html">Event Booking</a></li>
                     <li><a href="./AboutUs.html">About Us</a></li>
-                    <li><a href="">Help Desk</a></li>
+                    <li><a href="./AboutUs.html#screenBody">Help Desk</a></li>
                 </ul>
             </li>
             <li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
@@ -219,10 +219,10 @@
     <!-- Footer -->
     <footer class="footer-basic">
         <div class="social">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="#">Home</a></li>
