--- a/index.html
+++ b/index.html
@@ -69,6 +69,48 @@
     </nav>
   </header>
   <main>
+<div id="modalmsgSuccess" class="modalmsgSuccess">
+
+  <!-- Modal content for successfull SignIn -->
+  <div class="modalmsgSuccess-content">
+    <span class="closemsgSuccess">&times;</span>
+    <p class="validCred">Successfully logged in</p>
+  </div>
+
+</div>
+    <!-- The Modal for invalid credentials -->
+<div id="modalmsg" class="modalmsg">
+
+  <!-- Modal content -->
+  <div class="modalmsg-content">
+    <span class="closemsg">&times;</span>
+    <p class="invalidCred">Invalid Credentials</p>
+  </div>
+
+</div>
+<!-- The Modal for valid Booking -->
+<div id="modalmsg3" class="modalmsg3">
+
+  <!-- Modal content -->
+  <div class="modalmsg-content3">
+    <span class="closemsg3">&times;</span>
+    <p class="Bookingmsg">You will receive a mail from our team shortly</p>
+  </div>
+
+</div>
+<div id="modalmsg4" class="modalmsg4">
+
+  <!-- Modal content -->
+  <div class="modalmsg-content4">
+    <span class="closemsg4">&times;</span>
+    <p class="BookingError">Please sign in first</p>
+  </div>
+
+</div>
+
+
+
+
     <!-- Creates the popup body
     <button id=“show” onclick="show()">>Show Pop-Up</button>
     <dialog id=“popup”>
