--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HomePage</title>
+  <title>Mosaic Planners | Event Planning, Hotel, Travel, Food and Tourism Services</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/homePage.css">
+  <link rel="stylesheet" href="./css/tourism.css">
 
 </head>
 
@@ -248,24 +249,22 @@
       </div>
     </div>
   </main>
-  <div class="footer-basic">
-    <footer>
-      <div class="social">
-        <a href="#"><i class="icon ion-social-instagram"></i></a>
-        <a href="#"><i class="icon ion-social-snapchat"></i></a>
-        <a href="#"><i class="icon ion-social-twitter"></i></a>
-        <a href="#"><i class="icon ion-social-facebook"></i></a>
-      </div>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="./index.html">Home</a></li>
+  <footer class="footer-basic">
+    <div class="social">
+        <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com"><i class="fab fa-linkedin-in"></i></a>
+    </div>
+    <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Home</a></li>
         <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="./AboutUs.html">About</a></li>
+        <li class="list-inline-item"><a href="#">About</a></li>
         <li class="list-inline-item"><a href="#">Terms</a></li>
         <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-      </ul>
-      <p class="copyright">Mosaic Planners © 2021</p>
-    </footer>
-  </div>
+    </ul>
+    <p class="copyright">Copyright &copy; Mosaic Planners 2021 | All Rights Reserved</p>
+</footer>
   <!-- connecting javascript -->
   <script src="./js/homePage.js"></script>
 </body>
